<resources>
    <string name="app_name">Taipei Riverside Bike Exits</string>
    <string name="title_activity_maps">Taipei Riverside Bike Exits</string>
    <string name="map_id">dfb355c0f58c7df8</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="zoom">15f</string>

    <string name="information">About this exit</string>
    <string name="openInGmaps">Open in Google Maps</string>
    <string name="addressLine">Where</string>
    <string name="goToStreetView">See StreetView </string>
    <string name="exit_question"><small>Where\'s the nearest exit?</small></string>

    <string name="bridges">Show bridges</string>
    <string name="infoIcon">Info Icon</string>
    <string name="noteContent">Standard exit</string>
    <string name="YouBike">YouBike</string>
    <string name="TestString">Item</string>

    <string name="MapTypes">Map type</string>
    <string name="MapStyles">Map style</string>
    <string name="normal_map">Default map</string>
    <string name="minimal_map">Basic grey</string>
    <string name="hybrid_map">Satellite + labels</string>
    <string name="satellite_map">Satellite view only</string>
    <string name="terrain_map">Standard map</string>

    <string name="marker_types">Marker type</string>
    <string name="mType_circles">Circles</string>
    <string name="mType_markers">Markers</string>
    <string name="mType_numbers">Numbers</string>

    <string name="settings">Settings</string>
    <string name="reset_markers">Clear all markers</string>
    <string name="about_the_app">More information</string>
    <string name="feedback_link">Send me feedback!</string>
    <string name="external_links">Online resources</string>
    <string name="general_settings">General</string>
    <string name="select_an_option">Select an option</string>
    <string name="customize_appearance">Map appearance</string>
    <string name="notes_settings"><i><small>Notes</small></i></string>
    <string name="howDoI_settings"><i><small>How do I...</small></i></string>
    <string name="more_info_title">More information</string>

    <string name="pNormal_map">NormalMap</string>
    <string name="pHybrid_map">SatelliteLabels</string>
    <string name="pMinimal_map">BasicGrey</string>
    <string name="pTerrain_map">StandardMap</string>
    <string name="pSatellite_map">SatelliteViewOnly</string>

    <string name="blank"> </string>
    <string name="MapType">Map type</string>
    <string name="MapStyle">Map style</string>
    <string name="MarkerType">Marker type</string>
    <string name="CustomMarkers">Custom markers</string>

    <string name="normal_map_desc">Standard Google Maps style</string>
    <string name="hybrid_map_desc">Show terrain, with labels</string>
    <string name="minimal_map_desc">Muted grey map with less distractions</string>
    <string name="satellite_map_desc">Show terrain only, no labels</string>

    <string name="mType_circles_desc">Exits marked by circles on the map</string>
    <string name="mType_markers_desc">Use standard Google Maps icons</string>
    <string name="mType_numbers_desc">Show number popups on the exits</string>

    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="reset_markers_desc">Remove all custom markers added by user </string>
    <string name="feedback_link_desc">Feedback, comments or suggestions for improvement? Fill up this form to send me feedback.</string>
    <string name="YouBike_desc">Need to find the nearest YouBike station? Click here to visit the YouBike website.</string>
    <string name="custom_markers_desc"><small>To add a custom marker, tap and hold on an empty area of the map. To remove all markers, tap the option above to reset the map. Custom markers are temporary and do not persist between sessions.</small></string>
    <string name="external_links_desc"><small>These are links to external websites and will open in a separate browser window.</small></string>

    <string name="about_01">Additional resources that may be helpful when planning your bike ride.</string>
    <string name="about_02"><big>⛅ </big> Weather forecast</string>
    <string name="about_03">Hourly and weekly weather forecast. </string>
    <string name="about_04">Check the weather</string>
    <string name="about_05"><big>🗺️ </big> Map sources</string>
    <string name="about_06">Links to maps that I\'ve used as references while building this app. </string>
    <string name="about_07">Taipei City variant 1</string>
    <string name="about_08">Taipei City variant 2</string>
    <string name="about_09">Taipei City variant 3</string>
    <string name="about_10"><big>📌️ </big> New Taipei maps</string>
    <string name="about_11">Maps that contain Bike Exit info for New Taipei.</string>
    <string name="about_12">New Taipei City variant 1</string>
    <string name="about_13">New Taipei City variant 2</string>
    <string name="about_14">New Taipei City variant 3</string>
    <string name="about_15">New Taipei City variant 4</string>
    <string name="about_16"><big>📋 </big> Others</string>
    <string name="about_17">JSON files from gov website</string>
    <string name="about_18">Read the documentation</string>
    <string name="about_19">Buy me a coffee</string>
    <string name="separate"><small> ● ● ● </small></string>
    <string name="other_01">This app uses data published by data.gov.tw.</string>
    <string name="other_02">For tips on using/troubleshooting the app, or if you have questions on how the data was processed, I provide more juicy details here:</string>
    <string name="other_03">Like my work? Support me:  </string>

    <string name="langXX">Info panel language</string>
    <string name="langEN">English</string>
    <string name="langZH">Chinese</string>
    <string name="langEN_desc">Show info in machine-translated English</string>
    <string name="langZH_desc">Use the original Chinese text</string>

</resources>