<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="pMapTypes"
        app:title="@string/customize_appearance">

        <ListPreference
            app:key="mapStyleList"
            app:title="@string/MapStyle"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/aMapStyleOptions"
            app:entryValues="@array/aMapStyleOptions_values"
            app:dialogTitle="@string/select_an_option"
            app:summary="%s"
            android:summary="%s"/>

        <ListPreference
            app:key="markerTypeList"
            app:title="@string/MarkerType"
            app:useSimpleSummaryProvider="true"
            app:entries="@array/aMarkerStyleOptions"
            app:entryValues="@array/aMarkerStyleOptions_values"
            app:dialogTitle="@string/select_an_option"/>


        <Preference android:title="Clear all markers"
            android:key="@string/reset_markers"
            app:summary="@string/reset_markers_desc"
            />

    </PreferenceCategory>


    <PreferenceCategory
        app:key="pYouBikeLink"
        app:title="@string/YouBike" >

        <Preference android:title="@string/YouBike"
            app:summary="@string/YouBike_desc">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.google.com" />
        </Preference>


    </PreferenceCategory>


</PreferenceScreen>