<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">
    </View>


    <TextView
        android:id="@+id/kInfoView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="3dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/information" />


    <ImageView
        android:id="@+id/kAddress"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:paddingRight="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="0dp"
        android:paddingBottom="13dp"
        android:paddingEnd="5dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintRight_toLeftOf="@+id/kAddress_Line"
        app:layout_constraintTop_toTopOf="@id/kAddress_Line"
        app:srcCompat="@drawable/icon_svg_house"
        android:contentDescription="@string/addressLine"
        android:paddingStart="15dp" />
    <TextView
        android:id="@+id/kAddress_Line"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:minHeight="50dp"
        android:maxLines="2"
        android:paddingLeft="3dp"
        android:paddingRight="50dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/kAddress"
        app:layout_constraintTop_toBottomOf="@id/kInfoView"
        android:text="@string/addressLine"
        android:paddingEnd="50dp"
        android:paddingStart="3dp" />



    <ImageView
        android:id="@+id/kNotes"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:paddingRight="5dp"
        android:paddingLeft="15dp"
        android:paddingEnd="5dp"
        android:paddingTop="0dp"
        android:paddingBottom="2dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:contentDescription="@string/pinIcon"
        app:layout_constraintRight_toLeftOf="@+id/kNoteContent"
        app:layout_constraintTop_toTopOf="@id/kNoteContent"
        app:srcCompat="@drawable/icon_svg_notes"
        android:paddingStart="15dp" />
    <TextView
        android:id="@+id/kNoteContent"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:minHeight="45dp"
        android:maxLines="2"
        android:padding="3dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/kNotes"
        app:layout_constraintTop_toBottomOf="@id/kAddress_Line"
        android:text="@string/noteContent" />


    <Button
        android:id="@+id/kStreetViewLink"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/goToStreetView"
        app:layout_constraintTop_toBottomOf="@id/kNoteContent"
        app:layout_constraintStart_toStartOf="@id/kNoteContent"
        android:background="@color/purple_200"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/kStreetViewLink"
        />

</androidx.constraintlayout.widget.ConstraintLayout>